--- a/sites/stamped.com/bin/www/templates/password-reset.html
+++ b/sites/stamped.com/bin/www/templates/password-reset.html
@@ -131,7 +131,7 @@
                         
                         <p class="change_password replaced">Change password</p>
                         
-                        <p class="intro">Enter a new password for <strong>{{ email }}</strong></p>
+                        <p class="intro">Enter a new password for your Stamped account.</p>
                         
                         <form id="change_pw" action="{{ token }}" method="post">
                         <input type="password" class="text_input" id="password" name="password">
