Tweaks to email text

--- a/sites/stamped.com/bin/alerts/templates/email_password_reset.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_password_reset.html.j2
@@ -51,7 +51,9 @@
                                         </tr>
                                         
                                         <tr>
-                                            <td width="600" height="27" align="center" valign="bottom" style="font-size:3px;">&nbsp;</td>
+                                            <td width="600" height="100" align="center" valign="middle" style="color:#999999;font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:16px;">
+                                                This email was sent to you because you clicked on <a href="http://www.stamped.com/settings/password/forgot" style="text-decoration:none;color:#377AD9;">Forgot Password</a> on stamped.com or <br \>within the Stamped app. If you did not intend to change your password, or if you believe you <br \>received this email in error, please contact <a href="mailto:help@stamped.com" style="text-decoration:none;color:#377AD9;">help@stamped.com</a>.
+                                            </td>
                                         </tr>
                                         
                                     </table>
