--- a/sites/stamped.com/bin/alerts/templates/email_password_reset.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_password_reset.html.j2
@@ -46,7 +46,7 @@
                                         
                                         <tr>
                                             <td width="600" height="90" align="center" valign="middle" style="border:1px solid #d3f0c4;background-color:#f0faeb;color:#595959;font-family:Helvetica,Arial;font-size:16px;line-height:26px;">
-                                                Username: <strong>{{ screen_name }}</strong><br>Email: <strong>{{ email_address }}</strong>
+                                                Username: <strong>{{ screen_name }}</strong><br>Email: <a href="mailto:{{ email_address }}" style="text-decoration:none;color:#595959;font-weight:bold;">{{ email_address }}</a>
                                             </td>
                                         </tr>
                                         
