--- a/sites/stamped.com/bin/alerts/templates/email_restamp.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_restamp.html.j2
@@ -36,7 +36,7 @@
                                     <table width="600" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td width="600" height="36" align="center" valign="bottom" style="color:#262626;font-family:Helvetica,Arial;font-size:16px">
-                                                <strong>{{ name }}</strong> (@{{ screen_name }}) gave you credit for <strong>{{ title }}</strong>.
+                                                Congratulations! <strong>{{ name }}</strong> (@{{ screen_name }}) gave you credit for <strong>{{ title }}</strong>. This means you earn 2 more stamps. Nice job.
                                             </td>
                                         </tr>
                                         
