A few more small tweaks to password forms

--- a/sites/stamped.com/bin/www/templates/password-forgot.html
+++ b/sites/stamped.com/bin/www/templates/password-forgot.html
@@ -108,8 +108,12 @@
                 <div class="card">
                     <div class="top-wave"></div>
                     <div class="inner">
+                    
+                        {% if error %}
+                        
+                        <p class="intro spacing">{{ error }}</p>
 
-                        {% if email %}
+                        {% else %}{% if email %}
                         
                         <p class="intro spacing">An email has been sent with a link to reset your password.</p>
 
@@ -124,7 +128,7 @@
                         <input type="submit" id="submit" class="button_input " value="Submit">
                         </form>
 
-                        {% endif %}
+                        {% endif %}{% endif %}
                         
                     </div>
                     <div class="bottom-wave"></div>
