--- a/sites/stamped.com/bin/www/templates/password-reset.html
+++ b/sites/stamped.com/bin/www/templates/password-reset.html
@@ -141,11 +141,15 @@
                         <input type="submit" id="submit" class="button_input " value="Change">
                         </form>
 
+                        {% else %}{% if error %}
+                        
+                        <p class="intro spacing">{{ error }}</p>
+                        
                         {% else %}
                         
                         <p class="intro spacing">Your password has been successfully changed.</p>
 
-                        {% endif %}
+                        {% endif %}{% endif %}
                         
                     </div>
                     <div class="bottom-wave"></div>
