--- a/internal/projects/bulleit/Interfaces/BookDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/BookDetailViewController.xib
@@ -48,7 +48,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="715238449">
@@ -69,7 +68,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, -356}, {320, 365}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="764406955"/>
 								<string key="NSReuseIdentifierKey">_NS:363</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -91,7 +89,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 14}, {233, 36}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="18180027"/>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -126,7 +123,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 38}, {200, 21}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="101078116"/>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -155,7 +151,6 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{275, 14}, {30, 30}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="31986916"/>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
 								<int key="IBUIContentMode">8</int>
@@ -176,7 +171,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{15, 0}, {78, 25}}</string>
 										<reference key="NSSuperview" ref="31986916"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="504699399"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -215,7 +209,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{15, -1}, {78, 25}}</string>
 										<reference key="NSSuperview" ref="31986916"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="256600175"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -251,7 +244,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{104, 3}, {75, 26}}</string>
 										<reference key="NSSuperview" ref="31986916"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="882476180"/>
 										<string key="NSReuseIdentifierKey">_NS:541</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -262,7 +254,6 @@
 								</object>
 								<string key="NSFrame">{{0, 64}, {320, 38}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="437990520"/>
 								<string key="NSReuseIdentifierKey">_NS:49</string>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
@@ -278,7 +269,6 @@
 										<int key="NSvFlags">290</int>
 										<string key="NSFrameSize">{320, 1}</string>
 										<reference key="NSSuperview" ref="882476180"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="951634253"/>
 										<string key="NSReuseIdentifierKey">_NS:180</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -290,7 +280,6 @@
 								</object>
 								<string key="NSFrame">{{0, 102}, {320, 314}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="925299253"/>
 								<string key="NSReuseIdentifierKey">_NS:180</string>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
@@ -302,9 +291,9 @@
 								<int key="NSvFlags">-2147483359</int>
 								<string key="NSFrame">{{207, 44}, {98, 144}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="914412763"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
+								<reference key="IBUIBackgroundColor" ref="715238449"/>
 								<int key="IBUIContentMode">1</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
@@ -313,7 +302,6 @@
 								<int key="NSvFlags">-2147483359</int>
 								<string key="NSFrame">{{207, 44}, {98, 144}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="379087290"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -325,7 +313,6 @@
 						</object>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="802597465"/>
 						<reference key="IBUIBackgroundColor" ref="715238449"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -336,7 +323,6 @@
 				</object>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="582508261"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -628,6 +614,7 @@
 					<string>24.IBPluginDependency</string>
 					<string>26.IBPluginDependency</string>
 					<string>27.IBPluginDependency</string>
+					<string>29.CustomClassName</string>
 					<string>29.IBPluginDependency</string>
 					<string>32.IBPluginDependency</string>
 					<string>33.IBPluginDependency</string>
@@ -669,6 +656,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>STImageView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -702,154 +690,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">43</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">BookDetailViewController</string>
-					<string key="superclassName">EntityDetailViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>affiliateLogoView</string>
-							<string>gradientView</string>
-							<string>imageView</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIImageView</string>
-							<string>UIImageView</string>
-							<string>UIImageView</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>affiliateLogoView</string>
-							<string>gradientView</string>
-							<string>imageView</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">affiliateLogoView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">gradientView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">imageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/BookDetailViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">EntityDetailViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>categoryImageView</string>
-							<string>descriptionLabel</string>
-							<string>loadingView</string>
-							<string>mainActionButton</string>
-							<string>mainActionLabel</string>
-							<string>mainActionsView</string>
-							<string>mainContentView</string>
-							<string>scrollView</string>
-							<string>shelfImageView</string>
-							<string>titleLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIImageView</string>
-							<string>UILabel</string>
-							<string>UIActivityIndicatorView</string>
-							<string>UIButton</string>
-							<string>UILabel</string>
-							<string>UIView</string>
-							<string>UIView</string>
-							<string>UIScrollView</string>
-							<string>UIImageView</string>
-							<string>UILabel</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>categoryImageView</string>
-							<string>descriptionLabel</string>
-							<string>loadingView</string>
-							<string>mainActionButton</string>
-							<string>mainActionLabel</string>
-							<string>mainActionsView</string>
-							<string>mainContentView</string>
-							<string>scrollView</string>
-							<string>shelfImageView</string>
-							<string>titleLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">categoryImageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">descriptionLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">loadingView</string>
-								<string key="candidateClassName">UIActivityIndicatorView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainActionButton</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainActionLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainActionsView</string>
-								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainContentView</string>
-								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">scrollView</string>
-								<string key="candidateClassName">UIScrollView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">shelfImageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">titleLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EntityDetailViewController.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
