--- a/sites/stamped.com/bin/alerts/templates/email_password_forgot.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_password_forgot.html.j2
@@ -36,7 +36,7 @@
                                     <table width="600" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td width="600" align="center" valign="bottom" style="color:#262626;font-family:Helvetica,Arial,sans-serif;font-size:16px;line-height:27px;">
-                                                Click the link below to reset your password. <br \><span style="font-size:14px">This link will expire after 10 minutes.</span>
+                                                Click below to reset your password. <br \><span style="font-size:14px">This link will expire after 30 minutes.</span>
                                             </td>
                                         </tr>
                                         
