updating terms of service to take out 'pre-release' language

--- a/sites/stamped.com/bin/www/templates/terms-mobile.html
+++ b/sites/stamped.com/bin/www/templates/terms-mobile.html
@@ -23,11 +23,7 @@ font-weight: normal;
 </style>
 </head>
 <body>
-<p>Welcome to the pre-release version of [the Stamped service (the "Service")].  The following Terms of Use apply when you view or use the Service via our website located at <a href="http://www.stamped.com">www.stamped.com</a> (the "Site") or by accessing the Service through clicking on the application (the "Stamped App") on your mobile device.  Please review the following terms carefully.  By accessing or using the Site, the Stamped App or the Service, you signify your agreement to these Terms of Use.  If you do not agree to these Terms of Use, you may not access or use the Site.</p>
-
-<p>As a participant in our pre-release program, you are obtaining early access to the Service and the Stamped App.  As a participant, we may ask you from time to time during the pre-release program for your input regarding the Service, the Site and or the Stamped App and we would appreciate your candid feedback.  Any such feedback you provide will become the property of Stamped and we may use that information for our business purposes, including without limitation continuing to improve the Service, the Site and the Stamped App.</p>
-
-<p>You understand that you are using a pre-release version of the Service and that we are likely to make additional changes to the Service, the Site and the Stamped App before we make the Service, the Site or the Stamped App generally available for use.  These Terms of Use include a release by you of all claims for damage against us that may arise out of your use of the Service, the Site or the Stamped App. By using any of these, you agree to this release.</p>
+<p>Welcome to the Stamped service (the “Service”). The following Terms of Use apply when you view or use the Service via our website located at www.stamped.com (the “Site”) or by accessing the Service through clicking on the application (the “Stamped App”) on your mobile device. Please review the following terms carefully. By accessing or using the Site, the Stamped App or the Service, you signify your agreement to these Terms of Use. If you do not agree to these Terms of Use, you may not access or use the Site.</p>
 
 <h2>PRIVACY POLICY</h2>
 
