Revert "terms of service (non-binary version)"
This reverts commit 489d67ebbe5bb76142095b7cea6d3a33745d12ba.

--- a/sites/stamped.com/bin/www/templates/terms-mobile.html
+++ b/sites/stamped.com/bin/www/templates/terms-mobile.html
@@ -23,7 +23,7 @@ font-weight: normal;
 </style>
 </head>
 <body>
-<p>Welcome to the Stamped service (the "Service"). The following Terms of Use apply when you view or use the Service via our website located at www.stamped.com (the "Site") or by accessing the Service through clicking on the application (the "Stamped App") on your mobile device. Please review the following terms carefully. By accessing or using the Site, the Stamped App or the Service, you signify your agreement to these Terms of Use. If you do not agree to these Terms of Use, you may not access or use the Site.</p>
+<p>Welcome to the Stamped service (the “Service”). The following Terms of Use apply when you view or use the Service via our website located at www.stamped.com (the “Site”) or by accessing the Service through clicking on the application (the “Stamped App”) on your mobile device. Please review the following terms carefully. By accessing or using the Site, the Stamped App or the Service, you signify your agreement to these Terms of Use. If you do not agree to these Terms of Use, you may not access or use the Site.</p>
 
 <h2>PRIVACY POLICY</h2>
 
