--- a/sites/stamped.com/bin/www/templates/password-forgot.html
+++ b/sites/stamped.com/bin/www/templates/password-forgot.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Stamped, Inc."> 
         <meta name="copyright" content="Stamped, Inc."> 
         <meta name="robots" content="index,follow"> 
-        <meta name="viewport" content="width=device-width, initial-scale=0.36">
+        <meta name="viewport" content="width=640">
         
         <!-- Style -->
         <link rel="stylesheet" href="http://zomgco.com/tramped/css/normalize.css" type="text/css" media="screen" />
