Adding address to bottom of 'stamped now available' email to comply with campaign monitor

--- a/sites/stamped.com/bin/alerts/templates/email_now_available.html
+++ b/sites/stamped.com/bin/alerts/templates/email_now_available.html
@@ -83,7 +83,8 @@
                 </tr>
                 <tr>
                     <td colspan="3" width="660" height="60" align="center" valign="top" style="color:#999999;font-family:Helvetica,Arial,sans-serif;font-size:12px;">
-                        &copy;2011 Stamped, Inc.
+                        &copy;2011 Stamped, Inc. 
+                        <p>215 Park Avenue South, Suite 1802, New York, NY 10003</p>
                         <p><unsubscribe>Unsubscribe</unsubscribe> to be removed from our list and to no longer receive promotional emails</p>
                         
                     </td>
